@@ -1,4 +1,5 @@
 8 Jul 2018
+fix: avatar max-width
 fix: update user birthday when birthday not set
 fix: get random image get_body_image()
 update: delete get_body_image() cache on new upload
